# nodetool-whispercpp

./: README.md  pyproject.toml
.github/workflows/: publish-wheel.yml
src/nodetool/dsl/whispercpp/: whispercpp.py
src/nodetool/nodes/whispercpp/: whispercpp.py
src/nodetool/package_metadata/: nodetool-whispercpp.json
