[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-whispercpp"
version = "0.1.0"
description = "Whisper.cpp nodes for Nodetool"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core>=0.6.0",
    "pywhispercpp @ git+https://github.com/absadiki/pywhispercpp",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.10.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-whispercpp.json",
    "package_metadata/nodetool-whispercpp.json",
]
